--- a/src/pages/room.html
+++ b/src/pages/room.html
@@ -166,13 +166,224 @@
               </div>
             </form>
           </div>
+        </section>
+        <section class="section">
+          <h2 class="title sr-only">Perguntas da comunidade</h2>
           <div class="content-questions">
             <div class="question">
-                <img src="" alt="">
+              <div class="description">
+                <div class="avatar">
+                  <svg
+                    width="52"
+                    height="52"
+                    viewBox="0 0 52 52"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle cx="26" cy="26" r="26" fill="#3485FF" />
+                    <path
+                      d="M34 35V33C34 31.9391 33.5786 30.9217 32.8284 30.1716C32.0783 29.4214 31.0609 29 30 29H22C20.9391 29 19.9217 29.4214 19.1716 30.1716C18.4214 30.9217 18 31.9391 18 33V35"
+                      stroke="#FAFAFA"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M26 25C28.2091 25 30 23.2091 30 21C30 18.7909 28.2091 17 26 17C23.7909 17 22 18.7909 22 21C22 23.2091 23.7909 25 26 25Z"
+                      stroke="#FAFAFA"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </div>
+
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Possimus dolorem dicta error recusandae nulla nostrum est
+                  deleniti alias dolor! Officiis debitis optio non possimus.
+                  Mollitia officia reprehenderit fugit animi deleniti. Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Quasi alias
+                  sit harum. Repellat veniam, facilis itaque illum eius rerum
+                  velit, fugiat dicta iste natus cumque corporis voluptates
+                  voluptate non et! Lorem ipsum dolor, sit amet consectetur
+                  adipisicing elit.
+                </p>
+              </div>
+              <div class="read-delete">
+                <div class="read">
+                  <img
+                    src="/src/assets/icons/check.svg"
+                    alt="Marcar como lida"
+                  />
+                  Marcar como lida
+                </div>
+                <div class="delete">
+                  <img
+                    src="/src/assets/icons/trash.svg"
+                    alt="Excluir pergunta"
+                  />
+                  Excluir
+                </div>
+              </div>
+            </div>
+            <div class="question">
+              <div class="description">
+                <svg
+                  width="52"
+                  height="52"
+                  viewBox="0 0 52 52"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="26" cy="26" r="26" fill="#3485FF" />
+                  <path
+                    d="M34 35V33C34 31.9391 33.5786 30.9217 32.8284 30.1716C32.0783 29.4214 31.0609 29 30 29H22C20.9391 29 19.9217 29.4214 19.1716 30.1716C18.4214 30.9217 18 31.9391 18 33V35"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M26 25C28.2091 25 30 23.2091 30 21C30 18.7909 28.2091 17 26 17C23.7909 17 22 18.7909 22 21C22 23.2091 23.7909 25 26 25Z"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+
+                <p>O que e JavaScript?</p>
+              </div>
+              <div class="read-delete">
+                <div class="read">
+                  <img
+                    src="/src/assets/icons/check.svg"
+                    alt="Marcar como lida"
+                  />
+                  Marcar como lida
+                </div>
+                <div class="delete">
+                  <img
+                    src="/src/assets/icons/trash.svg"
+                    alt="Excluir pergunta"
+                  />
+                  Excluir
+                </div>
+              </div>
+            </div>
+            <div class="question">
+              <div class="description">
+                <svg
+                  width="52"
+                  height="52"
+                  viewBox="0 0 52 52"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="26" cy="26" r="26" fill="#3485FF" />
+                  <path
+                    d="M34 35V33C34 31.9391 33.5786 30.9217 32.8284 30.1716C32.0783 29.4214 31.0609 29 30 29H22C20.9391 29 19.9217 29.4214 19.1716 30.1716C18.4214 30.9217 18 31.9391 18 33V35"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M26 25C28.2091 25 30 23.2091 30 21C30 18.7909 28.2091 17 26 17C23.7909 17 22 18.7909 22 21C22 23.2091 23.7909 25 26 25Z"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+
+                <p>O que e TypeScript?</p>
+              </div>
+              <div class="read-delete">
+                <div class="read">
+                  <img
+                    src="/src/assets/icons/check.svg"
+                    alt="Marcar como lida"
+                  />
+                  Marcar como lida
+                </div>
+                <div class="delete">
+                  <img
+                    src="/src/assets/icons/trash.svg"
+                    alt="Excluir pergunta"
+                  />
+                  Excluir
+                </div>
+              </div>
+            </div>
+            <div class="question read">
+              <div class="description">
+                <svg
+                  width="52"
+                  height="52"
+                  viewBox="0 0 52 52"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="26" cy="26" r="26" fill="#3485FF" />
+                  <path
+                    d="M34 35V33C34 31.9391 33.5786 30.9217 32.8284 30.1716C32.0783 29.4214 31.0609 29 30 29H22C20.9391 29 19.9217 29.4214 19.1716 30.1716C18.4214 30.9217 18 31.9391 18 33V35"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M26 25C28.2091 25 30 23.2091 30 21C30 18.7909 28.2091 17 26 17C23.7909 17 22 18.7909 22 21C22 23.2091 23.7909 25 26 25Z"
+                    stroke="#FAFAFA"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+
+                <p>O que e Node?</p>
+              </div>
+              <div class="read-delete">
+                <div class="read">
+                  <img
+                    src="/src/assets/icons/check.svg"
+                    alt="Marcar como lida"
+                  />
+                  Marcar como lida
+                </div>
+                <div class="delete">
+                  <img
+                    src="/src/assets/icons/trash.svg"
+                    alt="Excluir pergunta"
+                  />
+                  Excluir
+                </div>
+              </div>
             </div>
           </div>
         </section>
       </div>
     </main>
+    <div class="modal-container">
+      <div class="modal">
+        <h2 class="title">Excluir pergunta</h2>
+        <p>Tem certeza que você deseja excluir esta pergunta?</p>
+        <form action="">
+          <label for="password" class="sr-only"></label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Digite sua senha"
+          />
+          <div class="buttons-modal">
+            <button class="button">Cancelar</button>
+            <button class="button">Sim, excluir</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
