open and close modal

--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/css/style.css" />
     <!-- JS -->
+    <script src="./src/javascript/main.js " defer></script>
   </head>
   <body>
     <header class="header container">
