--- a/src/pages/create-room.html
+++ b/src/pages/create-room.html
@@ -15,6 +15,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
     <!-- JS -->
+    <script src="../javascript/main.js " defer></script>
   </head>
   <body>
     <header class="header container">
