--- a/src/pages/room.html
+++ b/src/pages/room.html
@@ -15,6 +15,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
     <!-- JS -->
+    <script src="../javascript/main.js " defer></script>
   </head>
   <body>
     <header class="header container">
@@ -370,7 +371,7 @@
       <div class="modal">
         <h2 class="title">Excluir pergunta</h2>
         <p>Tem certeza que você deseja excluir esta pergunta?</p>
-        <form action="">
+        <form>
           <label for="password" class="sr-only"></label>
           <input
             type="password"
@@ -379,7 +380,7 @@
             placeholder="Digite sua senha"
           />
           <div class="buttons-modal">
-            <button class="button">Cancelar</button>
+            <button class="button closeModal">Cancelar</button>
             <button class="button">Sim, excluir</button>
           </div>
         </form>
